Blender Cycles-X SSS/Transparent problem #91626

Closed
opened 2021-09-23 09:16:34 +02:00 by ACE · 8 comments

System Information
Operating system: Windows 10 May 2021 Update
Graphics card: tested in rtx 3060 ti and gtx 1060

Blender Version
Broken: Blender 3.0 Cycles-X branch 22/09/2021 (and older Cycles-X versions)
Worked: Not Cycles-X versions

Short description of error
I think there is a problem with transparent objects and SSS (both “fixed radius” and normal random walk), when you use a transparent object on top of an object with SSS there is a strange effect in which you can still see the shape of the object.
Video example:
https://youtu.be/RYQzz4JwgQ4

Exact steps for others to reproduce the error

  1. add Principled BSDF to an object
  2. add the color/texture to base color and subsurface color
  3. raise the value of subsurface to any value above 0 (with fixed radius or normal random walk)
  4. add another object only with a transparent shader on top of the object.

Example .blend
BUG SSS TRANSPARENT.blend

**System Information** Operating system: Windows 10 May 2021 Update Graphics card: tested in rtx 3060 ti and gtx 1060 **Blender Version** Broken: Blender 3.0 Cycles-X branch 22/09/2021 (and older Cycles-X versions) Worked: Not Cycles-X versions **Short description of error** I think there is a problem with transparent objects and SSS (both “fixed radius” and normal random walk), when you use a transparent object on top of an object with SSS there is a strange effect in which you can still see the shape of the object. Video example: https://youtu.be/RYQzz4JwgQ4 **Exact steps for others to reproduce the error** 1. add Principled BSDF to an object 2. add the color/texture to base color and subsurface color 3. raise the value of subsurface to any value above 0 (with fixed radius or normal random walk) 4. add another object only with a transparent shader on top of the object. Example .blend [BUG SSS TRANSPARENT.blend](https://archive.blender.org/developer/F10555649/BUG_SSS_TRANSPARENT.blend)
Author

Added subscriber: @ace.animation

Added subscriber: @ace.animation
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm the bug with the provided file. It is rather subtle.

System Information
Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-23 05:54, hash: a351023bd5

I can confirm the bug with the provided file. It is rather subtle. **System Information** Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-23 05:54, hash: `a351023bd5`
Brecht Van Lommel self-assigned this 2021-09-23 16:22:57 +02:00

This issue was referenced by blender/cycles@b10e8a6ebe

This issue was referenced by blender/cycles@b10e8a6ebe705e2916ddb25f11a0a69292fbe970

This issue was referenced by ed541de29d

This issue was referenced by ed541de29dd01339736e04d95302e6e20495de54

This issue was referenced by None@62704

This issue was referenced by None@62704

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91626
No description provided.