Fix T91626: Cycles sss behind fully transparent object renders differently